<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task3</string>
    <string name="dragon">Hey you! I\'m a Dragon!</string>

    <string name="simple">Simple Action bar</string>
    <string name="simple_up">Simple Action bar + Up button</string>
    <string name="split">Split Action bar</string>
    <string name="tabs">Action bar with navigation tabs</string>
    <string name="list">Action bar with navigation list</string>
    <string name="custom">Action bar with Custom view</string>
    <string name="themed">Action bar with custom theme</string>
    <string name="action">Action bar with Action view</string>
    
    
    <string name="room">room</string>
    <string name="rowing">rowing</string>
    <string name="setting">setting</string>
    <string name="search">search</string>

    <string name="click_room">click button room</string>
    <string name="click_rowing">click button rowing</string>
    <string name="click_setting">click button setting</string>

    <string name="select">Selected : %s</string>
    <string name="record">Record - %d</string>
    <string name="tab1">Tab %d</string>

</resources>
